Switched out app-in-phone pic, fixed large gap above features section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -719,7 +719,7 @@ section {
 }
 
 .features .feature-icons {
-  margin-top: 120px;
+  margin-top: 0px;
 }
 
 .features .feature-icons h3 {
